--- a/hash2passbot/apps/bot/locales/hash2passbot.pot
+++ b/hash2passbot/apps/bot/locales/hash2passbot.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2022-06-04 15:36+0300\n"
+"POT-Creation-Date: 2022-06-04 16:22+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -135,7 +135,7 @@ msgid "👤 Профиль"
 msgstr ""
 
 #: hash2passbot/apps/bot/markups/common/common_markups.py:9
-msgid "💵 Приобрести запросы"
+msgid "💳 Приобрести запросы"
 msgstr ""
 
 #: hash2passbot/apps/bot/markups/common/common_markups.py:9
