--- a/hash2passbot/apps/bot/locales/en/LC_MESSAGES/hash2passbot.po
+++ b/hash2passbot/apps/bot/locales/en/LC_MESSAGES/hash2passbot.po
@@ -171,7 +171,7 @@ msgstr "📄 Description"
 
 #: hash2passbot/apps/bot/markups/common/common_markups.py:9
 msgid "🙋‍♂ Поддержка"
-msgstr "🙋 ♂ Support"
+msgstr "🙋‍♂ Support"
 
 #: hash2passbot/apps/bot/markups/common/common_markups.py:20
 msgid "✅ Я подписался"
